--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,9 @@
                 <version>${maven.jar.plugin.version}</version>
                 <configuration>
                     <archive>
-                        <mainClass>ru.smaliav.fitnessbot.Main</mainClass>
+                        <manifest>
+                            <mainClass>ru.smaliav.fitnessbot.Main</mainClass>
+                        </manifest>
                     </archive>
                 </configuration>
             </plugin>
