--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <log4j.version>1.2.17</log4j.version>
 
         <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
+        <mavem.copy-dependency.plugin.version>3.2.0</mavem.copy-dependency.plugin.version>
     </properties>
 
     <dependencies>
@@ -51,6 +52,7 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
+            <scope>runtime</scope>
         </dependency>
 
         <!-- General -->
@@ -66,12 +68,35 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>${mavem.copy-dependency.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>
+                                ${project.build.directory}/libs
+                            </outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>${maven.jar.plugin.version}</version>
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ru.smaliav.fitnessbot.Main</mainClass>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>libs/</classpathPrefix>
+                            <mainClass>
+                                ru.smaliav.fitnessbot.Main
+                            </mainClass>
                         </manifest>
                     </archive>
                 </configuration>
