--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ru.smaliav</groupId>
     <artifactId>fitness-bot</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>Fitness Bot</name>
     <description>Telegram Bot for your Fitness progress</description>
