Implemented sending charts with /weight get command Added tool to decline russian words Lots of refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=${POSTGRES_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+
+fitnessbot.get-weights.max-months=3
