Added min-max weight checks Minor improvements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 
 fitnessbot.get-weights.max-months=3
+fitnessbot.max-weight=1000
+fitnessbot.min-weight=0
