Small ChartHelper refactoring + Spring Boot version upgrade

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 fitnessbot.get-weights.max-months=3
 fitnessbot.max-weight=1000
 fitnessbot.min-weight=0
+
+fitnessbot.chart.font=Arial
+fitnessbot.chart.font-size=14
+fitnessbot.chart.extension=png
+fitnessbot.chart.title=
+fitnessbot.chart.time-axis-label=\u0414\u0430\u0442\u0430
+fitnessbot.chart.value-axis-label=\u0412\u0435\u0441
+fitnessbot.chart.watermark-text=@FitnessProgressBot
+fitnessbot.chart.watermark-font-size=30
+fitnessbot.chart.watermark-alpha=0.15
