Fixed cycle refs in MapStruct + removed DAOs + refactored repos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.datasource.url=${POSTGRES_URL}
 spring.datasource.username=${POSTGRES_LOGIN}
 spring.datasource.password=${POSTGRES_PASS}
-
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+
+# Turned on for MapStruct, we avoid cyclic references by BaseCycleAvoidingContext
+spring.main.allow-circular-references=true
 
 fitnessbot.get-weights.max-months=3
 fitnessbot.max-weight=1000
