Added ReportService test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,11 @@ fitnessbot.chart.value-axis-label=\u0412\u0435\u0441
 fitnessbot.chart.watermark-text=@FitnessProgressBot
 fitnessbot.chart.watermark-font-size=30
 fitnessbot.chart.watermark-alpha=0.15
+
+#---
+spring.config.activate.on-profile=test
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=test
+spring.datasource.password=test
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
